<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings"></string>
    <string name="app_name">MyFirstCalculator</string>


    <string name="history"></string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>


    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>

    <string name="factorial">x!</string>
    <string name="ln">ln</string>
    <string name="log">log</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>

    <string name="pi">π</string>
    <string name="root">√</string>
    <string name="squared">x²</string>
    <string name="percent">%</string>


    <string name="ans">Ans</string>
    <string name="clear">AC</string>
    <string name="ce">CE</string>



</resources>
